# balanco_llm

./: .dockerignore  .env.example  .env.real.example  .gitignore  AGENTS.md  README.md  docker-compose.real.yml  docker-compose.yml  pyproject.toml  pytest.ini
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
app/accounting/: admin.py  models.py  rules.py  services.py
app/audit/: models.py  services.py  urls.py  views.py
app/companies/: admin.py  forms.py  models.py  urls.py  views.py
app/config/: celery_app.py  settings.py  urls.py
app/dashboard/: forms.py  serializers.py  services.py  urls.py  views.py
app/documents/: admin.py  forms.py  models.py  services.py  storage.py  urls.py  views.py
app/extraction/: admin.py  events.py  models.py  ocr.py  openai_balance.py  parsers.py  pdf_text.py  pipeline.py  tables.py  tasks.py  validators.py
app/review/: admin.py  forms.py  models.py  services.py  urls.py  views.py
app/standardization/: apps.py  models.py  services.py
app/templates/: base.html
app/tests/: conftest.py
docker/: web.Dockerfile  worker.Dockerfile
specs/001-balance-import-reporting/: data-model.md  implementation-notes.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-validate-accounting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+75 files in other folders)
