[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balanco-llm"
version = "0.1.0"
description = "Balance document ingestion, review, and dashboarding"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.0,<6.0",
  "celery[redis]>=5.4,<6.0",
  "dj-database-url>=2.2,<3.0",
  "django-htmx>=1.19,<2.0",
  "django-storages>=1.14,<2.0",
  "boto3>=1.34,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "pymupdf>=1.24,<2.0",
  "pdfplumber>=0.11,<1.0",
  "ocrmypdf>=16.4,<17.0",
  "pandas>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-django>=4.8,<5.0",
  "factory_boy>=3.3,<4.0",
  "pytest-mock>=3.14,<4.0",
  "pytest-cov>=5.0,<6.0",
  "playwright>=1.45,<2.0",
  "ruff>=0.5,<0.6",
]

[tool.setuptools]
packages = ["config"]
package-dir = {"" = "app"}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["app"]
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
